--- a/pom.xml
+++ b/pom.xml
@@ -75,5 +75,6 @@
 		<module>jblog04</module>
 		<module>jblog05</module>
 		<module>jblog06</module>
+		<module>jblog1</module>
 	</modules>
 </project>
